load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "ast.go",
        "generator.go",
        "parser.go",
    ],
    importpath = "github.com/k0kubun/sqldef/schema",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/postgres",
        "//sqlparser",
    ],
)
