load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mssql",
    srcs = ["mssql.go"],
    importpath = "github.com/k0kubun/sqldef/adapter/mssql",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter",
        "@com_github_denisenkom_go_mssqldb//:go-mssqldb",
    ],
)
