load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "postgres",
    srcs = ["postgres.go"],
    importpath = "github.com/k0kubun/sqldef/adapter/postgres",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter",
        "@com_github_lib_pq//:pq",
    ],
)
