load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutils",
    srcs = ["testutils.go"],
    importpath = "github.com/k0kubun/sqldef/cmd/testutils",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter",
        "//schema",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
