load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bytes2",
    srcs = ["buffer.go"],
    importpath = "github.com/k0kubun/sqldef/sqlparser/dependency/bytes2",
    visibility = ["//visibility:public"],
)

go_test(
    name = "bytes2_test",
    srcs = ["buffer_test.go"],
    embed = [":bytes2"],
)
