load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sqltypes",
    srcs = [
        "bind_variables.go",
        "plan_value.go",
        "testing.go",
        "type.go",
        "value.go",
    ],
    importpath = "github.com/k0kubun/sqldef/sqlparser/dependency/sqltypes",
    visibility = ["//visibility:public"],
    deps = [
        "//sqlparser/dependency/bytes2",
        "//sqlparser/dependency/hack",
        "//sqlparser/dependency/querypb",
    ],
)

go_test(
    name = "sqltypes_test",
    srcs = [
        "bind_variables_test.go",
        "plan_value_test.go",
        "type_test.go",
        "value_test.go",
    ],
    embed = [":sqltypes"],
    deps = ["//sqlparser/dependency/querypb"],
)
